LI better organization of files

--- a/doc/D42/TR_Tasks3-4.tex
+++ b/doc/D42/TR_Tasks3-4.tex
@@ -21,7 +21,7 @@
   \noindent
   \begin{center}
   \textbf{
-  {\centering\includegraphics[height=3cm]{../logoCHISTERA2014}}\\
+  {\centering\includegraphics[height=3cm]{../fig/logoCHISTERA2014}}\\
    {\centering\Large COACHES project, CHIST-ERA 2014 program}
   }
   \end{center}
@@ -70,10 +70,10 @@
 \date{\today}
 
 \begin{document}
-\includegraphics[height=2cm]{../logoUNICAEN.jpg}
-\includegraphics[height=2cm]{../logoSapienza.png}
-\includegraphics[height=2cm]{logo-vub}
-\includegraphics[height=2cm]{logoSebanci}
+\includegraphics[height=2cm]{../fig/logoUNICAEN.jpg}
+\includegraphics[height=2cm]{../fig/logoSapienza.png}
+%\includegraphics[height=2cm]{logo-vub}
+\includegraphics[height=2cm]{../fig/logoSebanci}
 
 
 \makemadtitle
