--- a/doc/D51/D51_Sapienza.tex
+++ b/doc/D51/D51_Sapienza.tex
@@ -13,7 +13,6 @@
 \newsavebox{\notedate}
 
 \renewcommand{\title}[1]{\sbox{\notetitle}{\begin{minipage}{1.0\textwidth} \begin{center} \Large{\textbf{#1}} \end{center}\end{minipage} }}
-%\renewcommand{\author}[1]{\renewcommand{\and}{\quad}\sbox{\noteauthor}{\large{#1}}}
 \renewcommand{\author}[1]{\sbox{\noteauthor}{\begin{minipage}{1.0\textwidth} \begin{center} \large{#1} \end{center}\end{minipage}}}
 \renewcommand{\date}[1]{\sbox{\notedate}{\large{#1}}}
 \newcommand{\nb}[1]{\sbox{\notenumber}{\Large{\textbf{#1}}}}
@@ -24,8 +23,7 @@
   \noindent
   \begin{center}
   \textbf{
-  {\centering\includegraphics[height=3cm,bb=0 0 371 145]{../logoCHISTERA2014.png}}\\
-  %{\centering\includegraphics[height=3cm]{../logoCHISTERA2014.eps}}\\
+  {\centering\includegraphics[height=3cm,bb=0 0 371 145]{../fig/logoCHISTERA2014.png}}\\
    {\centering\Large COACHES project, CHIST-ERA 2014 program}
   }
   \end{center}
@@ -83,7 +81,7 @@ via Ariosto, 25 00185 Rome, Italy}}
 
 \begin{document}
 
-\includegraphics[height=3cm]{../logoSapienza.png}
+\includegraphics[height=3cm]{../fig/logoSapienza.png}
 
 \makemadtitle
 
