--- a/doc/D52/D52.tex
+++ b/doc/D52/D52.tex
@@ -11,8 +11,9 @@
 \newsavebox{\noteauthor}
 \newsavebox{\notenumber}
 \newsavebox{\notedate}
-\renewcommand{\title}[1]{\sbox{\notetitle}{\Large{\textbf{#1}}}}
-\renewcommand{\author}[1]{\renewcommand{\and}{\quad}\sbox{\noteauthor}{\large{#1}}}
+
+\renewcommand{\title}[1]{\sbox{\notetitle}{\begin{minipage}{1.0\textwidth} \begin{center} \Large{\textbf{#1}} \end{center}\end{minipage} }}
+\renewcommand{\author}[1]{\sbox{\noteauthor}{\begin{minipage}{1.0\textwidth} \begin{center} \large{#1} \end{center}\end{minipage}}}
 \renewcommand{\date}[1]{\sbox{\notedate}{\large{#1}}}
 \newcommand{\nb}[1]{\sbox{\notenumber}{\Large{\textbf{#1}}}}
 \newcommand{\makemadtitle}{
@@ -21,8 +22,7 @@
   \noindent
   \begin{center}
   \textbf{
-  {\centering\includegraphics[height=3cm,bb=0 0 371 145]{../logoCHISTERA2014.png}}\\
-  %{\centering\includegraphics[height=3cm]{../logoCHISTERA2014.eps}}\\
+  {\centering\includegraphics[height=3cm,bb=0 0 371 145]{../fig/logoCHISTERA2014.png}}\\
    {\centering\Large COACHES project, CHIST-ERA 2014 program}
   }
   \end{center}
@@ -33,7 +33,8 @@
   \begin{center}
     %\begin{large}\textbf{ Note~\usebox{\notenumber}.}\end{large}\\[.5em]
     \begin{Large}\textbf{\usebox{\notetitle}}\end{Large}\\[2em]
-    \begin{large}\usebox{\noteauthor} --- \usebox{\notedate}\end{large}
+    \begin{large}\usebox{\noteauthor}\\ [2em] 
+    \usebox{\notedate}\end{large}
   \end{center}
   \vspace{3em}
 }
@@ -64,21 +65,23 @@
 
 % NOTE ITSELF BELOW %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\title{D5.2 - Use cases...}
+\title{D5.2\\ Definition of the use cases for the demonstrations }
 \author{COACHES Consortium}
 
-%\nb{of the kickoff meeting, $27^{th},28^{th}$ October }
 
-\date{\today}
+\date{}
 
 \begin{document}
+\includegraphics[height=3cm]{../fig/logoUNICAEN.jpg}
+\includegraphics[height=3cm]{../fig/logoSapienza.png}
+
 
 \makemadtitle
 
 \vspace*{1.0in}
 \begin{abstract}
- This document summarizes the discussion during the kickoff meeting. It describes the document of work and specifying the role of each partner and describing the first steps for each work package.
-  \end{abstract}
+This document describes 4 use cases expected to develop for the final demonstration. 
+\end{abstract}
 
 \vspace*{1.5in}
 
@@ -92,7 +95,6 @@ The copyright in this document is the property of the COACHES Consortium. This d
 }
 \newpage
 
-%\section{Workpackages description and role of partners}
-
+\input{usecases}
 
 \end{document}
