--- a/doc/D52/D52_Sapienza.tex
+++ b/doc/D52/D52_Sapienza.tex
@@ -27,8 +27,7 @@
   \noindent
   \begin{center}
   \textbf{
-  {\centering\includegraphics[height=3cm,bb=0 0 371 145]{../logoCHISTERA2014.png}}\\
-  %{\centering\includegraphics[height=3cm]{../logoCHISTERA2014.eps}}\\
+  {\centering\includegraphics[height=3cm,bb=0 0 371 145]{../fig/logoCHISTERA2014.png}}\\
    {\centering\Large COACHES project, CHIST-ERA 2014 program}
   }
   \end{center}
@@ -86,7 +85,7 @@ via Ariosto, 25 00185 Rome, Italy}}
 
 \begin{document}
 
-\includegraphics[height=3cm]{../logoSapienza.png}
+\includegraphics[height=3cm]{../fig/logoSapienza.png}
 
 \makemadtitle
 
