Adjusted Deliverables numbers according to Proposal and DoW

--- a/doc/D11/D11.tex
+++ b/doc/D11/D11.tex
@@ -80,7 +80,7 @@ Univeristé de Caen Basse-Normandie}}
 
 
 
-\date{Draft}
+\date{Draft 0.1 - March 26, 2015}
 
 \begin{document}
 \includegraphics[height=2cm]{../fig/logoUNICAEN.jpg}
@@ -91,12 +91,12 @@ Univeristé de Caen Basse-Normandie}}
 
 \makemadtitle
 
-\vspace*{1.0in}
+%\vspace*{1.0in}
 \begin{abstract}
 This document describes the general principles of the Knowledge-based representation and reasoning techniques developed in WP1. In particular, it describes the formalism for representing the semantic map of the environment, spatial information, common sense, and events as well as the algorithms for reasoning about this knowledge. 
 \end{abstract}
 
-\vspace*{1.5in}
+\vspace*{1.5cm}
 
 \fbox{
 \begin{minipage}{1.0\textwidth}
