--- a/doc/D31/D312.tex
+++ b/doc/D31/D312.tex
@@ -68,32 +68,28 @@
 \newenvironment{proof}{{\bf Proof }}{\hfill$\Box$\par}
 \newcommand{\spaceafterproof}{\vspace{1em}}
 
+
 % NOTE ITSELF BELOW %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\title{D5.2-Sapienza\\ Definition of the use cases for the demonstrations}
-
-\author{Domenico D. Bloisi, Fabio Maria Carlucci, Giorgio Grisetti, \\
-Luca Iocchi, and Daniele Nardi\\
-\textit{Dept. of Computer, Control and Management Engineering\\
-Sapienza University of Rome\\
-via Ariosto, 25 00185 Rome, Italy}}
+\title{D3.1.2\\ Human needs estimation}
+\author{...}
 
 
-%\nb{of the kickoff meeting, $27^{th},28^{th}$ October }
-
-\date{Version 1.1 - March 26, 2015}
+\date{Draft 0.1 - ... }
 
 \begin{document}
 
-\includegraphics[height=3cm]{../fig/logoSapienza.png}
+\includegraphics[height=2cm]{../fig/logoUniCaen.png}
+
 
 \makemadtitle
 
+\vspace*{1.0in}
 \begin{abstract}
-This document describes the scenario in which the robots will operate and a set of use cases that will be implemented, demonstrated and evaluated.  
+This document describes methods and techniques for multi-modal human-robot interaction. 
 \end{abstract}
 
-\vspace*{2.0cm}
+\vspace*{1.5in}
 
 \fbox{
 \begin{minipage}{1.0\textwidth}
@@ -103,9 +99,9 @@ The copyright in this document is the property of the COACHES Consortium. This d
 \end{center}
 \end{minipage}
 }
+
 \newpage
 
-\input{UseCases_Sapienza}
 
 
 \end{document}
