--- a/doc/D42/D42.tex
+++ b/doc/D42/D42.tex
@@ -70,27 +70,23 @@
 
 % NOTE ITSELF BELOW %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\title{D5.2-Sapienza\\ Definition of the use cases for the demonstrations}
+\title{D4.2\\ Software for navigation and plan execution}
 
-\author{Domenico D. Bloisi, Fabio Maria Carlucci, Giorgio Grisetti, \\
-Luca Iocchi, and Daniele Nardi\\
+\author{Luca Iocchi,  ... \\
 \textit{Dept. of Computer, Control and Management Engineering\\
-Sapienza University of Rome\\
-via Ariosto, 25 00185 Rome, Italy}}
+Sapienza University of Rome}}
 
 
-%\nb{of the kickoff meeting, $27^{th},28^{th}$ October }
-
-\date{Version 1.1 - March 26, 2015}
+\date{Draft 0.1 - ....}
 
 \begin{document}
 
-\includegraphics[height=3cm]{../fig/logoSapienza.png}
+\includegraphics[height=2.2cm]{../fig/logoSapienza.png}
 
 \makemadtitle
 
 \begin{abstract}
-This document describes the scenario in which the robots will operate and a set of use cases that will be implemented, demonstrated and evaluated.  
+This document describes the software developed for safe navigation and plan excution related to Task T4.1.  
 \end{abstract}
 
 \vspace*{2.0cm}
@@ -105,7 +101,7 @@ The copyright in this document is the property of the COACHES Consortium. This d
 }
 \newpage
 
-\input{UseCases_Sapienza}
+
 
 
 \end{document}
