--- a/doc/D43/D43b_Caen_Sapienza.tex
+++ b/doc/D43/D43b_Caen_Sapienza.tex
@@ -70,7 +70,7 @@
 
 % NOTE ITSELF BELOW %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\title{D4.2-Caen-Sapienza\\ Decentralized Decision Making:\\ 
+\title{D4.3b Caen-Sapienza\\ Decentralized Decision Making:\\ 
 interaction between Planning and Execution}
 
 \author{Luca Iocchi$^1$,  Laurent Jeanpierre$^2$, Abdel-Illah Mouaddib$^2$\\
@@ -83,7 +83,7 @@ Univeristé de Caen Basse-Normandie}}
 
 
 
-\date{Version 0.1 - ....}
+\date{Draft 0.1 - March 26, 2015}
 
 \begin{document}
 
