--- a/doc/D52/UseCases_Sapienza.tex
+++ b/doc/D52/UseCases_Sapienza.tex
@@ -69,19 +69,19 @@ held on $27^{th}$ and $28^{th}$ October 2014 in Caen.
 COACHES project envisages the implementation of a set of use cases
 to show the feasibility of the approach and to assess the effectiveness
 of the proposed solutions with actual users.
-To this end, different use cases will be implemented, focusing on two main
-components of the entire system:
-\begin{enumerate}
-\item Short-term human-robot interaction;
-\item Safe navigation.
-\end{enumerate}
+To this end, several use cases will be implemented. 
+%, focusing on two main
+%components of the entire system:
+%\begin{enumerate}
+%\item Short-term human-robot interaction;
+%\item Safe navigation.
+%\end{enumerate}
 
 Four use cases are described in the following. The use cases are designed
 to allow a short-term interaction between the COACHES robots and the human users.
-In order to accomplish the required tasks, the robot must navigate
-safely in the environment. Navigation inside a populated environment, i.e., a mall
-during opening hours, must be done in order to avoid damage and non-social behaviors to people
-and goods.
+%In order to accomplish the required tasks, the robot must navigate
+%safely in the environment. Navigation inside a populated environment, i.e., a mall
+%during opening hours, must be done in order to avoid damage and non-social behaviors to people and goods.
 
 For each use case, the following data are provided:
 \begin{itemize}
@@ -98,7 +98,7 @@ Furthermore, a detailed overview of the preconditions and post-conditions for ea
 The objective of this use case is to highlight the social awareness
 of the robot in the completion of a given task. There are many ways
 to carry a bag for a customer, but only a few might be socially acceptable
-at a given moment. To perform good, the robot asks the customer about her/his priorities.
+at a given moment. To perform well, the robot asks the customer about her/his priorities.
 
 \subsubsection{Use case description}
 
@@ -129,8 +129,7 @@ If the customer is in a hurry, the robot
 with possible interesting offers for the customer.
 \end{enumerate}
 
-In any case the robot modulates its speed taking into account the number of detected people,
-to minimize the risk of collision.
+In any case the robot modulates its speed taking into account the number of detected people, to minimize the risk of collision.
 
 \subsubsection{Sequence diagram}
 
@@ -205,13 +204,10 @@ to the ice cream shop.
 
 This use case highlights how the robot is capable of
 recovering from a failure by exploiting automatic reasoning.
-Since the customer refuses the first offer proposed by the robot, it, instead of randomly proposing 
-a new offer to her/him, tries to understand the user's preferences.
+Since the customer refuses the first offer proposed by the robot, instead of randomly proposing a new offer to her/him, the robot tries to understand the user's preferences.
 
-Moreover, in this use case, the proactive nature of the robot's behavior (when allowed by security
-concerns) is also underlined: When no people are
-moving around, the robot can decide to approach itself a potential
-customer.
+Moreover, in this use case, the proactive nature of the robot's behavior (when allowed by security concerns) is also underlined: when no people are
+moving around, the robot can decide to approach itself a customer.
 
 \subsubsection{Use case description}
 
