--- a/doc/D43/D43.tex
+++ b/doc/D43/D43.tex
@@ -70,27 +70,25 @@
 
 % NOTE ITSELF BELOW %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\title{D5.2-Sapienza\\ Definition of the use cases for the demonstrations}
+\title{D4.3\\ Multi-Robot Planning using DEC-POMDP}
 
-\author{Domenico D. Bloisi, Fabio Maria Carlucci, Giorgio Grisetti, \\
-Luca Iocchi, and Daniele Nardi\\
-\textit{Dept. of Computer, Control and Management Engineering\\
-Sapienza University of Rome\\
-via Ariosto, 25 00185 Rome, Italy}}
+\author{... \\
+\textit{GREYC Lab\\
+Univeristé de Caen Basse-Normandie}}
 
 
-%\nb{of the kickoff meeting, $27^{th},28^{th}$ October }
 
-\date{Version 1.1 - March 26, 2015}
+
+\date{Draft 0.1 - ....}
 
 \begin{document}
 
-\includegraphics[height=3cm]{../fig/logoSapienza.png}
+\includegraphics[height=2cm]{../fig/logoUniCaen.png}
 
 \makemadtitle
 
 \begin{abstract}
-This document describes the scenario in which the robots will operate and a set of use cases that will be implemented, demonstrated and evaluated.  
+...
 \end{abstract}
 
 \vspace*{2.0cm}
@@ -105,7 +103,7 @@ The copyright in this document is the property of the COACHES Consortium. This d
 }
 \newpage
 
-\input{UseCases_Sapienza}
+
 
 
 \end{document}
